--- a/hireai/userapp/templates/userapp/job-detail.html
+++ b/hireai/userapp/templates/userapp/job-detail.html
@@ -106,7 +106,16 @@
                                
                                 {% endfor %}
                             </ul>
+                            <h4 class="mb-3">Requirements</h4>
+                            <p></p>
+                            <ul class="list-unstyled">
+                                {% for i in requirements_list %}
+                                <li><i class="fa fa-angle-right text-primary me-2"></i>{{ i|linebreaksbr|safe }}</li>
+                               
+                                {% endfor %}
+                            </ul>
                         </div>
+                        
         
                         <!-- <div class="">
                             <h4 class="mb-4">Apply For The Job</h4>
@@ -127,6 +136,19 @@
                     
         
                     <div class="col-lg-4">
+                        <div class="bg-light rounded p-5 wow slideInUp" data-wow-delay="0.1s">
+                            <h4 class="mb-4">Score</h4>
+                            <!-- <button id="showScoreBtn" class="btn btn-primary mb-4">GET SCORE</button> -->
+                            <p id="score" class="m-0" ><span style="color: rgb(0, 0, 0);">Score: </span>{{ score_dic.score }}</p>
+                            <br>
+                            <p id="score" class="m-0" ><span style="color: rgb(0, 0, 0);" >Explanation:</span> {{ score_dic.explanation }}</p>
+                            <br>
+                            <p id="score" class="m-0" ><span style="color: rgb(0, 0, 0);" >Missing:</span> {{ score_dic.missing }}</p>
+                            <br>
+                            <p id="score" class="m-0" ><span style="color: rgb(0, 0, 0);" >Summary: </span> {{ score_dic.summary }}</p>
+
+                        </div>
+                        <br>
                         <div class="bg-light rounded p-5 wow slideInUp" data-wow-delay="0.1s">
                             <h4 class="mb-4">AI Generated Summary</h4>
                             <button id="showSummaryBtn" class="btn btn-primary mb-4">Get AI Summary</button>
