more packages added

--- a/hireai/userapp/templates/userapp/create_user_profile.html
+++ b/hireai/userapp/templates/userapp/create_user_profile.html
@@ -216,7 +216,7 @@
                             </div>
                             <div class="col-12 col-sm-6 ">
                                 <label class="form-label" for="">Phone</label>
-                                <input type="number" class="form-control" required name="phone" placeholder="Your Phone" value="{{ extracted_data.phone }}" style="color: rgb(255, 75, 4);" >
+                                <input type="" class="form-control" required name="phone" placeholder="Your Phone" value="{{ extracted_data.phone }}" style="color: rgb(255, 75, 4);" >
                             </div>
                             <div class="col-12 col-sm-6 ">
                                 <label class="form-label" for="">Email</label>
@@ -240,7 +240,7 @@
                                 <input type="text" class="form-control" required name="technologies" placeholder="Technologies" value="{{ extracted_data.technologies }}" style="color: rgb(255, 75, 4);" >
                             </div>
                          <div class="col-12 ">
-                                <button class="btn btn-primary w-100" type="submit">Apply Now</button>
+                                <button class="btn btn-primary w-100" type="submit">Submit</button>
                             </div> 
                         </div>
                     </form>
